--- a/.eslintrc
+++ b/.eslintrc
@@ -151,7 +151,7 @@
     "no-new-object": 2,
     "no-spaced-func": 2,
     "no-trailing-spaces": 2,
-    "no-underscore-dangle": 2,
+    //"no-underscore-dangle": [2, { "allow": [] }],
     "semi-spacing": [
       2,
       {
