--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-sourcemaps": "^1.5.2",
     "gulp-util": "^3.0.6",
     "jsdoc": "^3.3.2",
+    "rectangular": "^1.0.0",
     "run-sequence": "^1.1.4",
     "should": "^7.1.1",
     "vinyl-buffer": "^1.0.0",
