--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "fincanvas",
   "version": "0.9.0",
-  "description": "Openfin Canvas support.",
+  "description": "Openfin's HTML canvas++ wrapper.",
   "repository": {
     "type": "git",
-    "url": "git://github.com/openfin/fincanvas.git"
+    "url": "https://github.com/openfin/fincanvas"
   },
   "main": "index.js",
   "scripts": {
     "test": "gulp test"
   },
-  "author": "SWirts",
+  "author": "SWirts, JEiten",
   "license": "MIT",
+  "dependencies": {
+    "rectangular": "^1.0.0"
+  },
   "devDependencies": {
     "browser-sync": "^2.9.1",
     "gulp": "^3.9.0",
@@ -21,13 +24,12 @@
     "gulp-exclude-gitignore": "^1.0.0",
     "gulp-load-plugins": "^1.0.0-rc.1",
     "gulp-mocha": "^2.1.3",
+    "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.5.2",
+    "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.6",
     "jsdoc": "^3.3.2",
-    "rectangular": "^1.0.0",
     "run-sequence": "^1.1.4",
-    "should": "^7.1.1",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "should": "^7.1.1"
   }
 }
